# FOGT-Integra-2022L

./: pyproject.toml
docs/: problem01.md
notebooks/: problem01.ipynb
